create-multi-similar-instance.tf
variable "awsprops" {
    type = map
    default = {
    region = "eu-north-1"
    vpc = "vpc-0160b9d979d050c17"
    ami = "ami-04429d960e0f4871e"
    itype = "t3.micro"
    subnet = "subnet-01264ef8b28b45749"
    publicip = true
    keyname = "awskey"
    secgroupname = "IAC-Sec-Group"
  }
    
}

provider "aws" {
  region = lookup(var.awsprops, "region")
  access_key = "AKIAVDDMUCGZ6FWQUXXJ"
  secret_key = "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"
}

resource "aws_security_group" "project-iac-sg" {
  name = lookup(var.awsprops, "secgroupname")
  description = lookup(var.awsprops, "secgroupname")
  vpc_id = lookup(var.awsprops, "vpc")

  // To Allow SSH Transport
  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  // To Allow Port 80 Transport
  ingress {
    from_port = 80
    protocol = "tcp"
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }
}


resource "aws_instance" "project-iac" {
  count = 3
  ami = lookup(var.awsprops, "ami")
  instance_type = lookup(var.awsprops, "itype")
  subnet_id = lookup(var.awsprops, "subnet") #FFXsubnet2
  associate_public_ip_address = lookup(var.awsprops, "publicip")
  key_name = lookup(var.awsprops, "keyname")
  vpc_security_group_ids = [
    aws_security_group.project-iac-sg.id
  ]
  root_block_device {
    delete_on_termination = true
    iops = 150
    volume_size = 10
    #volume_type = "gp2"
  }
  tags = {
    Name ="SERVER-${count.index}"
    Environment = "DEV"
    OS = "Centos"
    Managed = "IAC"
  }

  depends_on = [ aws_security_group.project-iac-sg ]
}


output "ec2instance" {
  value = aws_instance.project-iac.*.public_ip
}
